force-app/main/default/objects/Grant__c/Grant__c.object-meta.xml
<CustomObject>
    <label>Grant</label>
    <nameField>
        <displayFormat>GR-{0000}</displayFormat>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>