force-app/main/default/objects/Grant__c/fields/Budget_Code__c.field-meta.xml
<CustomField>
    <fullName>Budget_Code__c</fullName>
    <label>Budget Code</label>
    <length>55</length>
    <type>Text</type>
</CustomField>