force-app/main/default/objects/Grant__c/fields/Contact_Email_List__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_List__c</fullName>
    <description>Contact Email List</description>
    <label>Contact Email List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>