force-app/main/default/objects/Grant__c/fields/Contact_List_Display__c.field-meta.xml
<CustomField>
    <fullName>Contact_List_Display__c</fullName>
    <description>Contact List Display</description>
    <label>Contact List Display</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>