force-app/main/default/objects/Grant__c/fields/Due_for_Submission__c.field-meta.xml
<CustomField>
    <fullName>Due_for_Submission__c</fullName>
    <label>Due for Submission</label>
    <type>Date</type>
</CustomField>