force-app/main/default/objects/Grant__c/fields/Due_to_BD__c.field-meta.xml
<CustomField>
    <fullName>Due_to_BD__c</fullName>
    <label>Due to BD</label>
    <type>Date</type>
</CustomField>