force-app/main/default/objects/Grant__c/fields/Funding_Organization__c.field-meta.xml
<CustomField>
    <fullName>Funding_Organization__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Funding Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Grants</relationshipLabel>
    <relationshipName>Grants</relationshipName>
    <type>Lookup</type>
</CustomField>