force-app/main/default/objects/Grant__c/fields/Grant_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Grant_Contract_Number__c</fullName>
    <displayFormat>GCN-{0}</displayFormat>
    <label>Grant Contract Number</label>
    <type>AutoNumber</type>
</CustomField>