force-app/main/default/objects/Grant__c/fields/Grant_Description__c.field-meta.xml
<CustomField>
    <fullName>Grant_Description__c</fullName>
    <label>Grant Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>