force-app/main/default/objects/Grant__c/fields/Grant_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Grant_End_Date__c</fullName>
    <label>Grant End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>