force-app/main/default/objects/Grant__c/fields/Grant_Name__c.field-meta.xml
<CustomField>
    <fullName>Grant_Name__c</fullName>
    <label>Grant Name</label>
    <length>125</length>
    <required>true</required>
    <type>Text</type>
</CustomField>