force-app/main/default/objects/Grant__c/fields/Grant_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Grant_Reference_Number__c</fullName>
    <description>This will track all of the Grant Reference Number (GRN)&apos;s from WTWCSB previous data system.</description>
    <displayFormat>GRN-{000}</displayFormat>
    <label>Grant Reference Number</label>
    <type>AutoNumber</type>
</CustomField>