force-app/main/default/objects/Grant__c/fields/Grant_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Grant_Start_Date__c</fullName>
    <label>Grant Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>