force-app/main/default/objects/Grant__c/fields/Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>Grant_Type__c</fullName>
    <label>Grant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operating Grant</fullName>
            </value>
            <value>
                <fullName>Capital Grant</fullName>
            </value>
            <value>
                <fullName>Program Grant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>