force-app/main/default/objects/Grant__c/fields/Granting_Agency__c.field-meta.xml
<CustomField>
    <fullName>Granting_Agency__c</fullName>
    <label>Granting Agency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DBHDS</fullName>
            </value>
            <value>
                <fullName>Obici-Other</fullName>
            </value>
            <value>
                <fullName>DCJS</fullName>
            </value>
            <value>
                <fullName>SGG Fox Org (Federal) - Other</fullName>
            </value>
            <value>
                <fullName>Department of Veteran Services - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>