force-app/main/default/objects/Grant__c/fields/Real_Grant_Number__c.field-meta.xml
<CustomField>
    <fullName>Real_Grant_Number__c</fullName>
    <label>Grant Contract Number</label>
    <length>55</length>
    <type>Text</type>
</CustomField>