force-app/main/default/objects/Grant__c/fields/Reporting_On__c.field-meta.xml
<CustomField>
    <fullName>Reporting_On__c</fullName>
    <label>Reporting On?</label>
    <length>125</length>
    <type>Text</type>
</CustomField>