force-app/main/default/objects/Grant__c/fields/Submitted__c.field-meta.xml
<CustomField>
    <fullName>Submitted__c</fullName>
    <label>Submitted?</label>
    <length>125</length>
    <type>Text</type>
</CustomField>