force-app/main/default/objects/Grant__c/fields/WebGrants__c.field-meta.xml
<CustomField>
    <fullName>WebGrants__c</fullName>
    <label>WebGrants?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>