force-app/main/default/objects/Grant__c/fields/X1st_Warning__c.field-meta.xml
<CustomField>
    <fullName>X1st_Warning__c</fullName>
    <label>1st Warning</label>
    <type>Date</type>
</CustomField>