force-app/main/default/objects/Grant__c/fields/X2nd_Warning__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Warning__c</fullName>
    <label>2nd  Warning</label>
    <type>Date</type>
</CustomField>