force-app/main/default/objects/Grant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Grant_Name__c</columns>
    <columns>Grant_Amount__c</columns>
    <columns>Grant_Status__c</columns>
    <columns>Grant_Start_Date__c</columns>
    <columns>Grant_End_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>